--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "name": "Vitaliy Potapov",
     "email": "noginsk@rambler.ru"
   },
-  "main": "src/index.js",
-  "types": "types/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "code": "npm run lint",
     "lint": "eslint src",
     "test": "jest --onlyChanged",
     "tt": "jest --coverage",
     "tr": "BABEL_ENV=runtyper jest --no-cache",
-    "test:types": "tsc",
+    "build": "tsc",
     "ci": "run-s code tt tr test:types",
     "sync-yarn-lock": "rm yarn.lock && yarn import && git add -A yarn.lock && (git diff-index --quiet HEAD -- yarn.lock || git commit -m'sync yarn.lock' --no-verify)",
     "coveralls": "coveralls < coverage/lcov.info",
