--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
     "strict": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "lib": ["es6"],
-    "noImplicitAny": false
+    "lib": ["es6"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts"]
