--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "code": "npm run lint",
-    "lint": "eslint src",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
     "test": "jest --onlyChanged",
     "tt": "jest --coverage",
     "tr": "BABEL_ENV=runtyper jest --no-cache",
@@ -48,6 +48,8 @@
     "@types/css-mediaquery": "^0.1.0",
     "@types/jest": "^24.8.0",
     "@types/react-native": "^0.60.0",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
     "babel-eslint": "^10.0.2",
     "babel-plugin-runtyper": "^0.4.0",
     "coveralls": "^3.0.4",
@@ -63,7 +65,7 @@
     "typescript": "^3.5.2"
   },
   "lint-staged": {
-    "*.js": "eslint"
+    "*.ts": "eslint"
   },
   "jest": {
     "automock": false,
